--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "AngularElectron",
-  "version": "0.0.0",
-  "description": "AngularElectron",
+  "name": "electron-setup",
+  "version": "1.0.0",
+  "description": "Electron app Main scafolding",
   "main": "main.js",
   "dependencies": {
-    "mysql": "2.9.0"
+    "mysql": "latest"
   }
 }
