--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "electron-setup",
   "version": "1.0.0",
-  "description": "Electron app Main scafolding",
+  "description": "To get started, install Node if you don't have it in your system already. Our application should be structured as follows:",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "fs-jetpack": "^0.7.0",
+    "asar": "^0.7.2",
+    "q": "^1.4.1",
+    "gulp-copy": "0.0.2",
+    "gulp-uglify": "^1.3.0",
+    "gulp-usemin": "^0.3.12",
+    "rcedit": "^0.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sivsivsree/electron-setup.git"
   },
   "author": "Siv S",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sivsivsree/electron-setup/issues"
+  },
+  "homepage": "https://github.com/sivsivsree/electron-setup#readme"
 }
